--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,6 @@
     text-decoration: none;
     border: none;
     outline: none;
-    scroll-behavior: smooth;
     font-family: 'Roboto', sans-serif;
 }
 
